# MusicGateAway

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pages.yml  release.yml
docs/: API.md
frontend/: app.js  debug.html  index.html  style.css
installer/: windows.iss
scripts/: release.sh
server/: Cargo.toml
server/src/: api.rs  lib.rs  tidal.rs  types.rs
src/: api.rs  main.rs  tidal.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
website/: CNAME  index.html
