[package]
name = "music-gate-away"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "music-gate-away"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"
mime_guess = "2"
open = "5.3.3"
lofty = "0.23"
tokio-stream = "0.1"
dirs = "6"
