[package]
name = "music-gate-away-server"
version = "2.0.0"
edition = "2021"

[lib]
name = "music_gate_away"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"
mime_guess = "2"
lofty = "0.23"
tokio-stream = "0.1"
dirs = "6"
