[package]
name = "music-gate-away"
version = "2.0.1"
edition = "2021"

[dependencies]
music-gate-away-server = { path = "../server" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
open = "5.3.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
